# aibox

./: .env.production  .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  deploy-site.sh  docker-compose.infra.yml  docker-compose.pipeline.yml  package-lock.json  package.json  start.sh  vite.config.ts
.ci-secrets/: signing.key
.docs/: API Specification.md
.docs/Spec/: Frontend-桌面殼框架.md  Web搜索工具环境变量配置说明.md  tools_registry.json
.docs/image/: 瀏覽代理.md
.github/workflows/: build-tauri.yml  deploy-frontend.yml
.tests/.senario/: data-agent-query-scenarios.md  test-results.json  test-results.md
.tests/py/: test_aitask.py  test_da_scenarios.py  test_integration.py
.tests/rs/: auth_test.rs  config_test.rs  error_test.rs  rate_limit_test.rs
ai-services/: README.md  mypy.ini  requirements.txt
ai-services/aitask/: main.py
ai-services/bpa/: main.py
ai-services/celery_app/: __init__.py  app.py  tasks.py
ai-services/data_agent/: __init__.py  config_reader.py  main.py
ai-services/data_lake/: generate_sap_data.py  seed_inventory_tables.py  seed_schema.py
ai-services/data_query/: main.py
ai-services/datalake/: __init__.py  generate_inventory_data.py  generate_sap_data.py  populate_arangodb.py  seed_intent_catalog.py  seed_schema.py  seed_tools.py
ai-services/kb_pipeline/: __init__.py  arango_ops.py  chunker.py  embedder.py  graph.py  pipeline.py  qdrant_ops.py
ai-services/knowledge_agent/: __init__.py  main.py
ai-services/knowledge_assets/: main.py
ai-services/mcp_tools/: main.py
ai-services/tools/: __init__.py  base.py
api/: Cargo.toml
api/src/: config.rs  duckdb_conn.rs  error.rs  lib.rs  main.rs
api/src/api/: ai.rs  billing.rs  chat.rs  da.rs  da_intents.rs  da_query.rs  health.rs  intent.rs  intent_catalog.rs  knowledge.rs  mod.rs  ontology.rs  orch_intents.rs  services.rs  sse.rs  themes.rs  weather.rs  web_search.rs  ws.rs
api/src/auth/: mod.rs
api/src/db/: knowledge.rs  mod.rs  ontology.rs  themes.rs
api/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
api/src/models/: auth.rs  mod.rs
api/src/services/: ai_proxy.rs  billing.rs  heartbeat.rs  mod.rs  service_ctl.rs
public/: download.html
server/: install.sh
site/: index.html
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons_bak_20260329_225011/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src/components/: AgentCard.tsx  AgentFormModal.tsx  AppLogo.tsx  AppUpdater.tsx  CodeBlock.tsx  DOCXViewer.tsx  ExcelViewer.tsx  FileContentViewer.tsx  HeaderControls.tsx  IconPicker.tsx  JobMonitor.tsx  MermaidToggle.tsx  MessageActions.tsx  MessageBubble.tsx  ServiceStatusBar.tsx  TableBlock.tsx  ThemeTokenEditor.tsx  ToolFormModal.tsx
src/contexts/: AppThemeProvider.tsx  ThemeContext.tsx
src/pages/: BrowseAgent.tsx  BrowseTools.tsx  FunctionManagement.tsx  Home.tsx  IntentCatalog.tsx  IntentOrchestration.tsx  Login.tsx  MainLayout.tsx  RoleManagement.tsx  SystemParams.tsx  SystemParamsBasicTools.tsx  SystemParamsModels.tsx  SystemParamsWebSearch.tsx  TaskSessionChat.tsx  TaskSessionHistory.tsx  TaskSessionScheduled.tsx  ThemeTemplateManagement.tsx  UnderDevelopment.tsx  UserManagement.tsx  (+1 more)
(+111 files in other folders)
