[package]
name = "abc-api"
version = "1.0.0"
description = "ABC Desktop API Server"
authors = ["ABC Team"]
edition = "2021"

[[bin]]
name = "abc-api"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

jsonwebtoken = "9"
bcrypt = "0.15"

arangors = { version = "0.6", default-features = false, features = ["reqwest_async"] }
dotenvy = "0.15"

chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
duckdb = { version = "1.1", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

# SSE and WebSocket support
futures = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
lazy_static = "1.4"
tracing = "0.1"

# HTTP client for proxying
reqwest = { version = "0.11", features = ["json"] }

[[test]]
name = "error_test"
path = "../.tests/rs/error_test.rs"

[[test]]
name = "config_test"
path = "../.tests/rs/config_test.rs"

[[test]]
name = "auth_test"
path = "../.tests/rs/auth_test.rs"

[[test]]
name = "rate_limit_test"
path = "../.tests/rs/rate_limit_test.rs"
