[package]
name = "abc-desktop"
version = "1.0.0"
description = "ABC Desktop Management Application"
authors = ["ABC Team"]
edition = "2021"

[lib]
name = "abc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Utils
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
