[package]
name = "abc-desktop"
version = "1.0.0"
description = "ABC Desktop Management Application"
authors = ["ABC Team"]
edition = "2021"

[lib]
name = "abc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
