[package]
name = "abc-desktop"
version = "1.0.3"
description = "ABC Desktop Management Application"
authors = ["ABC Team"]
edition = "2021"

[lib]
name = "abc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
